test/spec_vectors/simd_f64x2_arith/fail/module_15.wat
(module (func $f64x2.mul-arg-empty (result v128) (f64x2.mul)))